Fixes issue of test class [UC-01][Implementation][refs issue #3]

--- a/pom.xml
+++ b/pom.xml
@@ -222,6 +222,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>lapr.project.ui.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
